@@ -1,3 +1,0 @@
-[general]
-
-maxretries = 2	;How many chances the caller has to enter their number
